Added flow and anomaly server

--- a/deployment/mesh-infra/argocd/projects/plat-app-services/kustomization.yaml
+++ b/deployment/mesh-infra/argocd/projects/plat-app-services/kustomization.yaml
@@ -13,10 +13,12 @@ resources:
 # - sads
 # - viqe
 - inmindstorage
-- inmind
+#- inmind
 - inmindlicenceapi
 - inmindlicencegui
 - inminddb
 - inmindbroker
 - inmindmainapi
 - inmindreverseproxy
+- inmindflow
+- inmindanomalyserver
