--- a/deployment/plat-app-services/inmindreverseproxy/base.yaml
+++ b/deployment/plat-app-services/inmindreverseproxy/base.yaml
@@ -4,18 +4,18 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: reverseproxy
-  name: reverseproxy
+    app: maingui
+  name: maingui
 spec:
   type: NodePort
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 35332
+    #nodePort: 35332
     #protocol: TCP
     name: httpreverse
   selector:
-    app: reverseproxy
+    app: maingui
 
 ---
 
@@ -24,22 +24,22 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: reverseproxy
-  name: reverseproxy
+    app: maingui
+  name: maingui
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: reverseproxy
+      app: maingui
   template:
     metadata:
       labels:
-        app: reverseproxy
+        app: maingui
     spec:
       imagePullSecrets:
         - name: my-registry-secret
       containers:
-      - name: reverseproxy
+      - name: maingui
         image: inventio.azurecr.io/iapp-quickanomaly/reverseproxy-x86:dev
         ports:
         - containerPort: 80
