--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -26,10 +26,6 @@ data:
             access_log /var/log/nginx/port80.com.access.log;
             error_log /var/log/nginx/port80.com.error.log;
 
-            location / {
-                proxy_pass http://maingui:80;
-            }
-
             location /mqtt
             {
                 proxy_http_version 1.1;
@@ -64,7 +60,7 @@ data:
             }
 
             location /mainapi/ {
-                #rewrite ^/mainapi/?(.*) /$1 break;
+                rewrite ^/mainapi/?(.*) /$1 break;
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -87,6 +83,10 @@ data:
                 if_modified_since off;
                 expires off;
                 etag off;
+            }
+
+            location / {
+                proxy_pass http://maingui:80;
             }
         }
     }
