--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -26,67 +26,12 @@ data:
             access_log /var/log/nginx/port80.com.access.log;
             error_log /var/log/nginx/port80.com.error.log;
 
-            location /mqtt
-            {
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
-                proxy_set_header Host $host;
-
-                proxy_pass http://localbroker:8000;
-            }
-
-            location /wsext
-            {
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
-                proxy_set_header Host $host;
-
-                proxy_pass http://node-red:34123;
-            }
-
-            location  /node-red  {
-                proxy_set_header Host $http_host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
-                proxy_pass http://node-red:1880;
-            }
-
-            location '/.well-known/acme-challenge' {
-                root /var/www/html;
-            }
-
             location /mainapi/ {
-                rewrite ^/mainapi/?(.*) /$1 break;
+                proxy_pass http://mainapi:5001/;
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                #Aggiunto i seguenti per pbm SSE http come descritto al seguente link
-
-                proxy_set_header Connection '';
-                proxy_http_version 1.1;
-                chunked_transfer_encoding off;
-                proxy_buffering off;
-                proxy_cache off;
-                proxy_read_timeout 86400s; 
-                proxy_pass http://mainapi:5001/;
-            }
-
-            location /serversdata/ {
-                alias /serversdata;
-                try_files $uri $uri/ =404;
-                add_header Cache-Control 'public';
-                add_header Access-Control-Allow-Origin *;
-                if_modified_since off;
-                expires off;
-                etag off;
-            }
-
-            location / {
-                proxy_pass http://maingui:80;
+                proxy_set_header X-Forwarded-Proto $scheme;
             }
         }
     }
