--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -27,12 +27,20 @@ data:
             error_log /var/log/nginx/port80.com.error.log;
 
             location /mainapi {
-                rewrite ^/mainapi/?(.*) /$1 break;
-                proxy_pass http://mainapi:5001/;
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto $scheme;
+              rewrite ^/mainapi/?(.*) /$1 break;
+
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+              proxy_set_header Connection '';
+              proxy_http_version 1.1;
+              chunked_transfer_encoding off;
+              proxy_buffering off;
+              proxy_cache off;
+              proxy_read_timeout 86400s; 
+
+              proxy_pass http://mainapi:5001;
             }
         }
     }
