--- a/deployment/plat-app-services/inmindmainapi/base.yaml
+++ b/deployment/plat-app-services/inmindmainapi/base.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  # labels:
-  #   app: mainapi
+  labels:
+    app: mainapi
   name: mainapi
 spec:
   type: NodePort
@@ -12,8 +12,8 @@ spec:
     port: 5001
     targetPort: 5001
     nodePort: 35353
-  # selector:
-  #   app: mainapi
+  selector:
+    app: mainapi
 
 ---
 
