--- a/deployment/plat-app-services/inmindmainapi/base.yaml
+++ b/deployment/plat-app-services/inmindmainapi/base.yaml
@@ -1,19 +1,29 @@
 
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   labels:
+#     app: mainapi
+#   name: mainapi
+# spec:
+#   type: NodePort
+#   ports:
+#   - protocol: TCP
+#     port: 5001
+#     targetPort: 5001
+#     nodePort: 35353
+#   selector:
+#     app: mainapi
+
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: mainapi
   name: mainapi
 spec:
-  #type: NodePort
   ports:
-  - protocol: TCP
-    port: 5001
-    targetPort: 5001
-    nodePort: 35353
-  # selector:
-  #   app: mainapi
+    - protocol: TCP
+      port: 5001
+      targetPort: 5001
 
 ---
 
