--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -59,6 +59,12 @@ data:
             }
 
             location /mainapi {
+
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+                proxy_set_header Host $host;
+
                 rewrite ^/mainapi/?(.*) /$1 break;
                 proxy_pass http://mainapi:5001;
             }
