--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -15,7 +15,11 @@ data:
     }
 
     http {
-        access_log /var/log/nginx/access.log main; # Abilita i log di accesso
+        log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    
+        access_log /var/log/nginx/access.log main;
 
         server {
             client_max_body_size        20000M;
