--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -164,7 +164,7 @@ spec:
   http:
     - match:
         - uri:
-            prefix: "/mainapi"
+            prefix: "/mainapi2"
       rewrite:
         uri: "/"
       route:
