added path rewrite

--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -184,6 +184,8 @@ spec:
   - match:
     - uri:
         prefix: "/mainapi"
+    - uri:
+        prefix: "/mainapi/"
     rewrite:
       uri: "/"
     route:
